# Ollama-MCP-Streamable-http-Client

./: .gitignore  README.md  mcp_streamable_http_article.md  pyproject.toml
src/: client.py
