[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["src"]

[project]
name = "Ollama-MCP-Streamable-http-Client"
version = "0.1.0"
description = "MCP client using streamable http to communicate with MCP Server and uses Ollama agent and model"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Prince Cheruvathur", email = "prncher@gmail.com" },
]
keywords = ["python", "MCP Client", "Streamable", "http", "ollama"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "langchain-ollama>=0.3.0",
    "langchain-core>=0.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/prncher/Ollama-MCP-Streamable-http-Client"
Repository = "https://github.com/prncher/Ollama-MCP-Streamable-http-Client"